--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
         "yargs": "^15.4.1"
     },
     "dependencies": {
+        "@fancyapps/fancybox": "^3.5.7",
+        "jquery": "^3.5.1",
         "smart-grid": "^2.1.2",
         "swiper": "^5.4.5"
     },
