--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     },
     "dependencies": {
         "@fancyapps/fancybox": "^3.5.7",
+        "isotope-layout": "^3.0.6",
         "jquery": "^3.5.1",
         "smart-grid": "^2.1.2",
         "swiper": "^5.4.5"
